[package]
name = "hexstack"
version = "0.2.2"
edition = "2024"
description = "Hex Stack - A simple stack to create modern backend applications that are fast and have the best in class developer experience."
license = "MIT"
authors = ["You guru911u@gmail.com"]
keywords = ["server", "cli", "generator", "http", "websocket"]
repository = "https://github.com/guru901/ripress"
categories = [
    "command-line-utilities",
    "development-tools::build-utils",
    "web-programming::http-server",
    "web-programming::websocket"
]

[dependencies]
anyhow = "1.0.99"
console = "0.16.0"
dialoguer = "0.12.0"
indicatif = "0.18.0"
ripress = { version = "1.8.4" , features = ["with-wynd"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "process"] }
wynd = { version = "0.4.3" , features = ["with-ripress"] }

[dev-dependencies]
tempfile = "3.8.1"
