[package]
name = "hexstack"
version = "0.4.3"
edition = "2024"
description = "Hex Stack - A simple stack to create modern backend applications that are fast and have the best in class developer experience."
license = "MIT"
authors = ["You guru911u@gmail.com"]
keywords = ["server", "cli", "generator", "http", "websocket"]
repository = "https://github.com/guru901/hexstack"
categories = [
    "command-line-utilities",
    "development-tools::build-utils",
    "web-programming::http-server",
    "web-programming::websocket"
]
exclude = ["benchmark.png"]

[dependencies]
anyhow = "1.0.99"
console = "0.16.0"
dialoguer = "0.12.0"
indicatif = "0.18.0"
reqwest = { version = "0.12.23", features = ["json"] }
semver = "1.0.27"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "process"] }

[dev-dependencies]
tempfile = "3.8.1"
